turtleart.kerr36.Kerr36.scala.error
Compilation error:
Kerr36:7: error: '<-' expected but ';' found.
  for (i<-avance(20);droite(90);avance(20);gauche(45);avance(20);gauche(135);avance(20);droite(45);avance(20);gauche(90);avance(20);droite(45);avance(20);gauche(135);avance(20);gauche(45);avance(20);droite(90);avance(20);gauche(45);avance(20);gauche(45
                               ^Kerr36:7: error: '<-' expected but ';' found.
  for (i<-avance(20);droite(90);avance(20);gauche(45);avance(20);gauche(135);avance(20);droite(45);avance(20);gauche(90);avance(20);droite(45);avance(20);gauche(135);avance(20);gauche(45);avance(20);droite(90);avance(20);gauche(45);avance(20);gauche(45
                                          ^Kerr36:7: error: '<-' expected but ';' found.
  for (i<-avance(20);droite(90);avance(20);gauche(45);avance(20);gauche(135);avance(20);droite(45);avance(20);gauche(90);avance(20);droite(45);avance(20);gauche(135);avance(20);gauche(45);avance(20);droite(90);avance(20);gauche(45);avance(20);gauche(45
                                                     ^Kerr36:7: error: '<-' expected but ';' found.
  for (i<-avance(20);droite(90);avance(20);gauche(45);avance(20);gauche(135);avance(20);droite(45);avance(20);gauche(90);avance(20);droite(45);avance(20);gauche(135);avance(20);gauche(45);avance(20);droite(90);avance(20);gauche(45);avance(20);gauche(45
                                                                ^Kerr36:7: error: '<-' expected but ';' found.
  for (i<-avance(20);droite(90);avance(20);gauche(45);avance(20);gauche(135);avance(20);droite(45);avance(20);gauche(90);avance(20);droite(45);avance(20);gauche(135);avance(20);gauche(45);avance(20);droite(90);avance(20);gauche(45);avance(20);gauche(45
                                                                            ^Kerr36:7: error: '<-' expected but ';' found.
  for (i<-avance(20);droite(90);avance(20);gauche(45);avance(20);gauche(135);avance(20);droite(45);avance(20);gauche(90);avance(20);droite(45);avance(20);gauche(135);avance(20);gauche(45);avance(20);droite(90);avance(20);gauche(45);avance(20);gauche(45
                                                                                       ^Kerr36:7: error: '<-' expected but ';' found.
  for (i<-avance(20);droite(90);avance(20);gauche(45);avance(20);gauche(135);avance(20);droite(45);avance(20);gauche(90);avance(20);droite(45);avance(20);gauche(135);avance(20);gauche(45);avance(20);droite(90);avance(20);gauche(45);avance(20);gauche(45
                                                                                                  ^Kerr36:7: error: '<-' expected but ';' found.
  for (i<-avance(20);droite(90);avance(20);gauche(45);avance(20);gauche(135);avance(20);droite(45);avance(20);gauche(90);avance(20);droite(45);avance(20);gauche(135);avance(20);gauche(45);avance(20);droite(90);avance(20);gauche(45);avance(20);gauche(45
                                                                                                             ^Kerr36:7: error: '<-' expected but ';' found.
  for (i<-avance(20);droite(90);avance(20);gauche(45);avance(20);gauche(135);avance(20);droite(45);avance(20);gauche(90);avance(20);droite(45);avance(20);gauche(135);avance(20);gauche(45);avance(20);droite(90);avance(20);gauche(45);avance(20);gauche(45
                                                                                                                        ^Kerr36:7: error: '<-' expected but ';' found.
  for (i<-avance(20);droite(90);avance(20);gauche(45);avance(20);gauche(135);avance(20);droite(45);avance(20);gauche(90);avance(20);droite(45);avance(20);gauche(135);avance(20);gauche(45);avance(20);droite(90);avance(20);gauche(45);avance(20);gauche(45
                                                                                                                                   ^Kerr36:7: error: '<-' expected but ';' found.
  for (i<-avance(20);droite(90);avance(20);gauche(45);avance(20);gauche(135);avance(20);droite(45);avance(20);gauche(90);avance(20);droite(45);avance(20);gauche(135);avance(20);gauche(45);avance(20);droite(90);avance(20);gauche(45);avance(20);gauche(45
                                                                                                                                              ^Kerr36:7: error: '<-' expected but ';' found.
  for (i<-avance(20);droite(90);avance(20);gauche(45);avance(20);gauche(135);avance(20);droite(45);avance(20);gauche(90);avance(20);droite(45);avance(20);gauche(135);avance(20);gauche(45);avance(20);droite(90);avance(20);gauche(45);avance(20);gauche(45
                                                                                                                                                         ^Kerr36:7: error: '<-' expected but ';' found.
  for (i<-avance(20);droite(90);avance(20);gauche(45);avance(20);gauche(135);avance(20);droite(45);avance(20);gauche(90);avance(20);droite(45);avance(20);gauche(135);avance(20);gauche(45);avance(20);droite(90);avance(20);gauche(45);avance(20);gauche(45
                                                                                                                                                                     ^Kerr36:7: error: '<-' expected but ';' found.
  for (i<-avance(20);droite(90);avance(20);gauche(45);avance(20);gauche(135);avance(20);droite(45);avance(20);gauche(90);avance(20);droite(45);avance(20);gauche(135);avance(20);gauche(45);avance(20);droite(90);avance(20);gauche(45);avance(20);gauche(45
                                                                                                                                                                                ^Kerr36:7: error: '<-' expected but ';' found.
  for (i<-avance(20);droite(90);avance(20);gauche(45);avance(20);gauche(135);avance(20);droite(45);avance(20);gauche(90);avance(20);droite(45);avance(20);gauche(135);avance(20);gauche(45);avance(20);droite(90);avance(20);gauche(45);avance(20);gauche(45
                                                                                                                                                                                           ^Kerr36:7: error: '<-' expected but ';' found.
  for (i<-avance(20);droite(90);avance(20);gauche(45);avance(20);gauche(135);avance(20);droite(45);avance(20);gauche(90);avance(20);droite(45);avance(20);gauche(135);avance(20);gauche(45);avance(20);droite(90);avance(20);gauche(45);avance(20);gauche(45
                                                                                                                                                                                                      ^Kerr36:7: error: '<-' expected but ';' found.
  for (i<-avance(20);droite(90);avance(20);gauche(45);avance(20);gauche(135);avance(20);droite(45);avance(20);gauche(90);avance(20);droite(45);avance(20);gauche(135);avance(20);gauche(45);avance(20);droite(90);avance(20);gauche(45);avance(20);gauche(45
                                                                                                                                                                                                                 ^Kerr36:7: error: '<-' expected but ';' found.
  for (i<-avance(20);droite(90);avance(20);gauche(45);avance(20);gauche(135);avance(20);droite(45);avance(20);gauche(90);avance(20);droite(45);avance(20);gauche(135);avance(20);gauche(45);avance(20);droite(90);avance(20);gauche(45);avance(20);gauche(45
                                                                                                                                                                                                                            ^Kerr36:7: error: '<-' expected but ';' found.
  for (i<-avance(20);droite(90);avance(20);gauche(45);avance(20);gauche(135);avance(20);droite(45);avance(20);gauche(90);avance(20);droite(45);avance(20);gauche(135);avance(20);gauche(45);avance(20);droite(90);avance(20);gauche(45);avance(20);gauche(45
                                                                                                                                                                                                                                       ^Kerr36:7: error: '<-' expected but ';' found.
  for (i<-avance(20);droite(90);avance(20);gauche(45);avance(20);gauche(135);avance(20);droite(45);avance(20);gauche(90);avance(20);droite(45);avance(20);gauche(135);avance(20);gauche(45);avance(20);droite(90);avance(20);gauche(45);avance(20);gauche(45
                                                                                                                                                                                                                                                  ^Kerr36:8: error: '<-' expected but ',' found.
),avance(20);gauche(45)} 
 ^Kerr36:8: error: illegal start of simple expression
),avance(20);gauche(45)} 
            ^Kerr36:8: error: '<-' expected but '}' found.
),avance(20);gauche(45)} 
                       ^